# ImageCompressor

./: CMakeLists.txt  README.md  main.cpp
Task1/: circle.h  ishape.h  rectangle.h  square.h  triangle.h
Task2/: fopen.md
Task3/: removeDuplicates.md
Task4/: nxn_image.md
headers/: appcontroller.h  appwindow.h  compressionmanager.h  filemanager.h  imagepyramid.h  mainwindow.h
impl/: appcontroller.cpp  appwindow.cpp  compressionmanager.cpp  filemanager.cpp  imagepyramid.cpp  mainwindow.cpp
